[CHORE] gc 로그 수집하지 않도록 수정